<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context="com.baraa.firebase.whatsapp.activities.MainActivity"
    android:gravity="center"
    android:padding="20dp" >

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/whatsapp"
        android:layout_marginBottom="20dp"
        tools:ignore="ContentDescription" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/TextInputNameLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:hint="@string/user_name"
        android:padding="10dp"
        app:startIconDrawable="@drawable/ic_baseline_person_24"
        app:endIconMode="clear_text" >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"/>
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/TextInputEmailLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:hint="@string/email"
        android:padding="10dp"
        app:startIconDrawable="@drawable/ic_baseline_email_24"
        app:endIconMode="clear_text" >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"/>

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/TextInputStatusLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:hint="@string/status"
        app:startIconDrawable="@drawable/ic_nfo"
        android:padding="10dp" >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:maxLength="200"/>

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/TextInputPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:hint="@string/password"
        app:startIconDrawable="@drawable/ic_baseline_lock_24"
        app:counterEnabled="true"
        app:counterMaxLength="8"
        app:endIconMode="password_toggle"
        android:padding="10dp" >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:maxLength="9"/>

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/signUpBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:layout_marginTop="@dimen/cardview_default_radius"
        android:textAllCaps="false"
        android:backgroundTint="@color/purple_500" />

    <TextView
        android:id="@+id/signInActivity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:padding="25dp"
        android:text="@string/signIn"
        android:textSize="15sp"
        tools:ignore="TextSizeCheck" />

</LinearLayout>